--- a/Views/AddEditExpenseView.xaml
+++ b/Views/AddEditExpenseView.xaml
@@ -1,52 +1,56 @@
-﻿<UserControl x:Class="ETAG_ERP.Views.AddEditExpenseControl"
+﻿<UserControl x:Class="ETAG_ERP.Views.AddEditExpenseView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             FlowDirection="RightToLeft"
-             Background="#F8F8F8">
-
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:ETAG_ERP.Views"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="20">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <!-- 🧾 محتوى النموذج -->
-        <StackPanel Grid.Row="0" Margin="0 0 0 10" VerticalAlignment="Top">
-            <TextBlock Text="تفاصيل المصروف" FontSize="20" FontWeight="Bold" Margin="0 0 0 20"/>
+        <!-- العنوان -->
+        <TextBlock Grid.Row="0" Text="إدارة المصروفات" 
+                   FontSize="24" FontWeight="Bold" 
+                   HorizontalAlignment="Center" Margin="0,0,0,20"/>
 
-            <StackPanel Orientation="Horizontal" Margin="0 5">
-                <TextBlock Text="التاريخ:" Width="100" VerticalAlignment="Center"/>
-                <DatePicker SelectedDate="{Binding Expense.Date}" Width="200"/>
+        <!-- النموذج -->
+        <StackPanel Grid.Row="1">
+            <!-- وصف المصروف -->
+            <StackPanel Margin="0,0,0,15">
+                <TextBlock Text="وصف المصروف *" FontWeight="Bold" Margin="0,0,0,5"/>
+                <TextBox x:Name="DescriptionTextBox" Text="{Binding Expense.Description}" 
+                         Height="35" FontSize="16" Padding="10"/>
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal" Margin="0 5">
-                <TextBlock Text="النوع:" Width="100" VerticalAlignment="Center"/>
-                <ComboBox SelectedItem="{Binding Expense.Type}" Width="200">
-                    <ComboBoxItem Content="مصروف"/>
-                    <ComboBoxItem Content="إيراد"/>
-                </ComboBox>
+            <!-- المبلغ -->
+            <StackPanel Margin="0,0,0,15">
+                <TextBlock Text="المبلغ *" FontWeight="Bold" Margin="0,0,0,5"/>
+                <TextBox x:Name="AmountTextBox" Text="{Binding Expense.Amount}" 
+                         Height="35" FontSize="16" Padding="10"/>
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal" Margin="0 5">
-                <TextBlock Text="التصنيف:" Width="100" VerticalAlignment="Center"/>
-                <TextBox Text="{Binding Expense.Category}" Width="200"/>
-            </StackPanel>
-
-            <StackPanel Orientation="Horizontal" Margin="0 5">
-                <TextBlock Text="الوصف:" Width="100" VerticalAlignment="Center"/>
-                <TextBox Text="{Binding Expense.Description}" Width="300"/>
-            </StackPanel>
-
-            <StackPanel Orientation="Horizontal" Margin="0 5">
-                <TextBlock Text="المبلغ:" Width="100" VerticalAlignment="Center"/>
-                <TextBox Text="{Binding Expense.Amount}" Width="200"/>
+            <!-- تاريخ المصروف -->
+            <StackPanel Margin="0,0,0,15">
+                <TextBlock Text="تاريخ المصروف *" FontWeight="Bold" Margin="0,0,0,5"/>
+                <DatePicker x:Name="ExpenseDatePicker" SelectedDate="{Binding Expense.ExpenseDate}" 
+                            Height="35" FontSize="16"/>
             </StackPanel>
         </StackPanel>
 
-        <!-- ✅ أزرار العمليات -->
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="حفظ" Width="100" Margin="5" Command="{Binding SaveCommand}"/>
-            <Button Content="إلغاء" Width="100" Margin="5" Command="{Binding CancelCommand}"/>
+        <!-- الأزرار -->
+        <StackPanel Grid.Row="2" Orientation="Horizontal" 
+                    HorizontalAlignment="Center" Margin="0,20,0,0">
+            <Button Content="حفظ" Style="{StaticResource AccentButtonStyle}" 
+                    Width="120" Height="40" Margin="0,0,10,0"
+                    Command="{Binding SaveCommand}"/>
+            <Button Content="إلغاء" Style="{StaticResource DangerButtonStyle}" 
+                    Width="120" Height="40"
+                    Command="{Binding CancelCommand}"/>
         </StackPanel>
     </Grid>
 </UserControl>
